--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libsignal-protocol-c"]
 	path = libsignal-protocol-c
 	url = https://github.com/WhisperSystems/libsignal-protocol-c
+[submodule "libqrencode"]
+	path = libqrencode
+	url = https://github.com/fukuchi/libqrencode
