Storage interface and implementation for ldb
- Patch version

--- a/util/Makefile
+++ b/util/Makefile
@@ -1,9 +1,10 @@
 BIN=signalclient
-INCLUDE=../include
+INCLUDE=-I../include
+LIBS=-lleveldb
 CXXFLAGS=-g -O0 -Wall -std=c++11
 
 all:
-	$(CXX) $(CXXFLAGS) -I $(INCLUDE)  signalclient.cpp -o $(BIN)
+	$(CXX) $(CXXFLAGS) $(INCLUDE) $(LIBS) signalclient.cpp -o $(BIN)
 
 clean:
 	$(RM) -rf $(BIN)
