--- a/util/Makefile
+++ b/util/Makefile
@@ -1,10 +1,10 @@
 BIN=signalclient
 INCLUDE=-I../include
 LIBS=-lleveldb
-CXXFLAGS=-g -O0 -Wall -std=c++11
+CXXFLAGS=-g -O0 -Wall -std=c++11 -I../libsignal-protocol-c/src/ -DENABLE_LOGGING
 
 all:
-	$(CXX) $(CXXFLAGS) $(INCLUDE) $(LIBS) signalclient.cpp ../src/libtsec.a -o $(BIN)
+	$(CXX) $(CXXFLAGS) $(INCLUDE) $(LIBS) signalclient.cpp ../src/libtsec.a ../libsignal-protocol-c/build/src/libsignal-protocol-c.a -o $(BIN)
 
 clean:
 	$(RM) -rf $(BIN)
