--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 RANLIB=ranlib
-LIBSRC=CryptoProvider.cpp Base64.cpp AccountManager.cpp ProvisioningCipher.cpp Api.cpp Websocket.cpp
+LIBSRC=CryptoProvider.cpp Base64.cpp AccountManager.cpp ProvisioningCipher.cpp Api.cpp Websocket.cpp WebSocketProtocol.cpp DeviceMessages.cpp
 LIBOBJ=$(LIBSRC:.cpp=.o)
 
 CXXFLAGS=-Wall -g -O0 -std=c++11 -I../libsignal-protocol-c/src/ -DENABLE_LOGGING -Wno-unused-function -Wno-unused-variable
@@ -20,3 +20,6 @@ $(TARGETS): $(LIBOBJ)
 
 clean:
 	$(RM) -rf *.o $(TARGETS) $(TSECLIB)
+
+cleanall: clean
+	$(RM) -rf *pb.h WebSocketProtocol.cpp DeviceMessages.cpp
